src/eleventy/content/_includes/v24.1/known-limitations/read-committed-limitations.md
- Schema changes (e.g., [`CREATE TABLE`]({% link "{{ page.version.version }}/create-table.md" %}), [`CREATE SCHEMA`]({% link "{{ page.version.version }}/create-schema.md" %}), [`CREATE INDEX`]({% link "{{ page.version.version }}/create-index.md" %})) cannot be performed within explicit `READ COMMITTED` transactions, and will cause transactions to abort. As a workaround, [set the transaction's isolation level]({% link "{{ page.version.version }}/read-committed.md" %}#set-the-current-transaction-to-read-committed) to `SERIALIZABLE`. [#114778](https://github.com/cockroachdb/cockroach/issues/114778)
- `READ COMMITTED` transactions performing `INSERT`, `UPDATE`, or `UPSERT` cannot access [`REGIONAL BY ROW`]({% link "{{ page.version.version }}/table-localities.md" %}#regional-by-row-tables) tables in which [`UNIQUE`]({% link "{{ page.version.version }}/unique.md" %}) and [`PRIMARY KEY`]({% link "{{ page.version.version }}/primary-key.md" %}) constraints exist, the region is not included in the constraint, and the region cannot be computed from the constraint columns. [#110873](https://github.com/cockroachdb/cockroach/issues/110873)
- Multi-column-family checks during updates are not supported under `READ COMMITTED` isolation. [#112488](https://github.com/cockroachdb/cockroach/issues/112488)
- Because locks acquired by [foreign key]({% link "{{ page.version.version }}/foreign-key.md" %}) checks, [`SELECT FOR UPDATE`]({% link "{{ page.version.version }}/select-for-update.md" %}), and [`SELECT FOR SHARE`]({% link "{{ page.version.version }}/select-for-update.md" %}) are fully replicated under `READ COMMITTED` isolation, some queries experience a delay for Raft replication.
- [Foreign key]({% link "{{ page.version.version }}/foreign-key.md" %}) checks are not performed in parallel under `READ COMMITTED` isolation.
- [`SELECT FOR UPDATE` and `SELECT FOR SHARE`]({% link "{{ page.version.version }}/select-for-update.md" %}) statements are less optimized under `READ COMMITTED` isolation than under `SERIALIZABLE` isolation. Under `READ COMMITTED` isolation, `SELECT FOR UPDATE` and `SELECT FOR SHARE` usually perform an extra lookup join for every locked table when compared to the same queries under `SERIALIZABLE`. In addition, some optimization steps (such as de-correlation of correlated [subqueries]({% link "{{ page.version.version }}/subqueries.md" %})) are not currently performed on these queries.
- Regardless of isolation level, [`SELECT FOR UPDATE` and `SELECT FOR SHARE`]({% link "{{ page.version.version }}/select-for-update.md" %}) statements in CockroachDB do not prevent insertion of new rows matching the search condition (i.e., [phantom reads]({% link "{{ page.version.version }}/read-committed.md" %}#non-repeatable-reads-and-phantom-reads)). This matches PostgreSQL behavior at all isolation levels. [#120673](https://github.com/cockroachdb/cockroach/issues/120673)